surface identification and facet transformation should be working

--- a/notebooks/lv/tests/surfe_identification_on_LVIdeal.ipynb
+++ b/notebooks/lv/tests/surfe_identification_on_LVIdeal.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fc3ca1ea00d4067bd674dd81d6e02aa",
+       "model_id": "963845fbf74c4f9394d4105d30b8af3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -40,7 +40,7 @@
    "source": [
     "filepath = Path(\"../sample_files/ellipsoid_2.stl\")\n",
     "lv = LV.from_file(filepath)\n",
-    "lv.tetrahedralize(backend=TETRA_BACKEND.TETGEN, quality=True, order=1, mindihedral=10, minratio=1.4, nobisect=True)\n",
+    "# lv.tetrahedralize(backend=TETRA_BACKEND.TETGEN, quality=True, order=1, mindihedral=10, minratio=1.4, nobisect=True)\n",
     "lv.plot(show_edges=True)"
    ]
   },
@@ -50,63 +50,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from project_heart.utils.spatial_utils import *\n",
-    "from project_heart.utils.vector_utils import *"
+    "lv.identify_regions(LV_GEO_TYPES.IDEAL)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([2, 2, 2, ..., 2, 2, 2], dtype=int64),\n",
-       " array([2, 2, 2, ..., 0, 0, 0], dtype=int64))"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lv.identify_base_and_apex_surfaces()\n",
-    "lv.identify_epi_endo_surfaces(90)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "lv.transform_point_data_to_cell_data(LV_MESH_DATA.EPI_ENDO_GUESS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv.plot(\"surface\", \n",
-    "        \"FACETS\",\n",
-    "        show_edges=True,\n",
-    "        vnodes=[\n",
-    "          (LV_VIRTUAL_NODES.APEX, \"green\"),\n",
-    "          (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
-    "          ],\n",
-    "        cmap=\"Set1\",\n",
-    "        preference=\"cell\",\n",
-    "        categorical=True,\n",
-    "        split_sharp_edges=True,\n",
-    "        smooth_shading=False,\n",
-    "        ambient=0.0,\n",
-    "        diffuse=0.0,\n",
-    "        specular=0.0,\n",
-    "        )"
+    "lv.transform_region_to_facet_data(LV_MESH_DATA.SURFS)"
    ]
   },
   {
@@ -117,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d7e7435e6e04514b31ad3f8035924d8",
+       "model_id": "8f1ce3a98220474e9ac3f0ecb7defc5e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +83,57 @@
     }
    ],
    "source": [
-    "lv.plot(show_edges=True)"
+    "lv.plot(\"surface\", \n",
+    "        LV_MESH_DATA.SURFS,\n",
+    "        preference=\"cell\",\n",
+    "        show_edges=True,\n",
+    "        vnodes=[\n",
+    "          (LV_VIRTUAL_NODES.APEX, \"green\"),\n",
+    "          (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
+    "          ],\n",
+    "        cmap=\"Set1\",\n",
+    "        \n",
+    "        categorical=True,\n",
+    "        split_sharp_edges=True,\n",
+    "        smooth_shading=False,\n",
+    "        # ambient=0.0,\n",
+    "        # diffuse=0.0,\n",
+    "        # specular=0.0,\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.plot(\"mesh\", \n",
+    "        LV_MESH_DATA.SURFS,\n",
+    "        preference=\"cell\",\n",
+    "        show_edges=True,\n",
+    "        vnodes=[\n",
+    "          (LV_VIRTUAL_NODES.APEX, \"green\"),\n",
+    "          (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
+    "          ],\n",
+    "        cmap=\"Set1\",\n",
+    "        \n",
+    "        categorical=True,\n",
+    "        split_sharp_edges=True,\n",
+    "        smooth_shading=False,\n",
+    "        # ambient=0.0,\n",
+    "        # diffuse=0.0,\n",
+    "        # specular=0.0,\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.unique(lv.mesh.cell_data[LV_MESH_DATA.SURFS.value])"
    ]
   },
   {
@@ -178,31 +181,32 @@
     "endo_epi_base_mesh = np.zeros(lv.mesh.n_points)\n",
     "endo_epi_base_mesh[id_map] = endo_epi_base\n",
     "# add data to mesh\n",
-    "lv.surface_mesh.point_data[LV_MESH_DATA.SURFS.value] = endo_epi_base\n",
-    "lv.mesh.point_data[LV_MESH_DATA.SURFS.value] = endo_epi_base_mesh\n",
+    "# lv.surface_mesh.point_data[LV_MESH_DATA.SURFS.value] = endo_epi_base\n",
+    "# lv.mesh.point_data[LV_MESH_DATA.SURFS.value] = endo_epi_base_mesh\n",
     "\n",
     "# compute facet data\n",
-    "cellMap = lv.transform_point_data_to_cell_data(LV_MESH_DATA.SURFS, method=lambda x: int(np.max(x)), surface=True)\n",
-    "lv.set_facet_data(\"FACETS\", cellMap)\n",
+    "# cellMap = lv.transform_point_data_to_cell_data(LV_MESH_DATA.SURFS, method=lambda x: int(np.max(x)), surface=True)\n",
+    "# lv.set_facet_data(\"FACETS\", cellMap)\n",
+    "# lv.transform_surface_point_data_to_facet_data(LV_MESH_DATA.SURFS)\n",
     "\n",
     "# lv.transform_point_data_to_cell_data(LV_MESH_DATA.SURFS, method=lambda x: int(np.max(x)))\n",
     "#plot\n",
-    "lv.plot(\"surface\", \n",
-    "        \"FACETS\",\n",
-    "        show_edges=True,\n",
-    "        vnodes=[\n",
-    "          (LV_VIRTUAL_NODES.APEX, \"green\"),\n",
-    "          (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
-    "          ],\n",
-    "        cmap=\"Set1\",\n",
-    "        preference=\"cell\",\n",
-    "        categorical=True,\n",
-    "        split_sharp_edges=True,\n",
-    "        smooth_shading=False,\n",
-    "        ambient=0.0,\n",
-    "        diffuse=0.0,\n",
-    "        specular=0.0,\n",
-    "        )"
+    "# lv.plot(\"surface\", \n",
+    "#         LV_MESH_DATA.SURFS,\n",
+    "#         show_edges=True,\n",
+    "#         vnodes=[\n",
+    "#           (LV_VIRTUAL_NODES.APEX, \"green\"),\n",
+    "#           (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
+    "#           ],\n",
+    "#         cmap=\"Set1\",\n",
+    "#         preference=\"cell\",\n",
+    "#         categorical=True,\n",
+    "#         split_sharp_edges=True,\n",
+    "#         smooth_shading=False,\n",
+    "#         ambient=0.0,\n",
+    "#         diffuse=0.0,\n",
+    "#         specular=0.0,\n",
+    "#         )"
    ]
   },
   {
