--- a/notebooks/lv/tests/surfe_identification_on_LVtypeA.ipynb
+++ b/notebooks/lv/tests/surfe_identification_on_LVtypeA.ipynb
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d2ed77f4c40456c87329de13f72ee44",
+       "model_id": "5013dcf18103453bb860c07e23536765",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,14 +38,14 @@
     }
    ],
    "source": [
-    "filepath = Path(\"C:/Users/igorp/Downloads/38_79.11_41.17_11.01.2022.xplt\")\n",
-    "lv = LV.from_xplt(filepath)\n",
+    "filepath = Path(\"../sample_files/lvhexmesh_typeA.vtk\")\n",
+    "lv = LV.from_file(filepath)\n",
     "lv.plot(show_edges=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d50e24ce505b4675a8ec612182ccbd88",
+       "model_id": "a25275f742ce49cfaf074ee85f4a77f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -74,14 +74,14 @@
     }
    ],
    "source": [
-    "lv.identify_base_and_apex_surfaces()\n",
-    "lv.identify_epi_endo_surfaces(88)\n",
+    "lv.identify_base_and_apex_regions()\n",
+    "lv.identify_epi_endo_regions(85)\n",
     "lv.plot(scalars=LV_MESH_DATA.EPI_ENDO_GUESS.value, categorical=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,10 +114,10 @@
     "# filter by endo\n",
     "ioi = ioi[np.where(endo_epi[ioi] != LV_SURFS.ENDO)]\n",
     "\n",
-    "center_pts = pts[ioi]\n",
-    "est_base = centroid(center_pts)\n",
-    "est_radius = radius(center_pts)\n",
-    "lv.add_virtual_node(LV_VIRTUAL_NODES.MITRAL, est_base)\n",
+    "# center_pts = pts[ioi]\n",
+    "# est_base = centroid(center_pts)\n",
+    "# est_radius = radius(center_pts)\n",
+    "# lv.add_virtual_node(LV_VIRTUAL_NODES.MITRAL, est_base)\n",
     "\n",
     "# identify final surfaces\n",
     "endo_epi_base = np.copy(endo_epi)\n",
@@ -127,19 +127,19 @@
     "endo_epi_base_mesh = np.zeros(lv.mesh.n_points)\n",
     "endo_epi_base_mesh[id_map] = endo_epi_base\n",
     "# add data to mesh\n",
-    "lv._surface_mesh.point_data[LV_MESH_DATA.SURFS.value] = endo_epi_base\n",
+    "lv.surface_mesh.point_data[LV_MESH_DATA.SURFS.value] = endo_epi_base\n",
     "lv.mesh.point_data[LV_MESH_DATA.SURFS.value] = endo_epi_base_mesh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50fa19109c564e53b8eac6d7c96163dd",
+       "model_id": "078132440b024333849fb43100238b50",
        "version_major": 2,
        "version_minor": 0
       },
