minor plot changes

--- a/notebooks/lv/demos/surface_identification_on_different_LV_geo_types.ipynb
+++ b/notebooks/lv/demos/surface_identification_on_different_LV_geo_types.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a401755076f431595f242c2a99bcf2c",
+       "model_id": "291854d8c767404c8602d17aa4b0bc09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -54,13 +54,10 @@
     "        scalars=LV_MESH_DATA.SURFS,\n",
     "        container=\"cells\",\n",
     "        show_edges=True,\n",
-    "        vnodes=[\n",
-    "          (LV_VIRTUAL_NODES.APEX, \"green\"),\n",
-    "          (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
-    "          ],\n",
     "        categorical=True,\n",
     "        split_sharp_edges=True,\n",
     "        smooth_shading=False,\n",
+    "        pretty=False,\n",
     "        )"
    ]
   },
@@ -79,7 +76,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69454d82af9c45fe8b0c9b5552bc8519",
+       "model_id": "818fee9eeb7242c7bff05472929cc7ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -100,13 +97,10 @@
     "        scalars=LV_MESH_DATA.SURFS,\n",
     "        container=\"cells\",\n",
     "        show_edges=True,\n",
-    "        vnodes=[\n",
-    "          (LV_VIRTUAL_NODES.APEX, \"green\"),\n",
-    "          (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
-    "          ],\n",
     "        categorical=True,\n",
     "        split_sharp_edges=True,\n",
     "        smooth_shading=False,\n",
+    "        pretty=False,\n",
     "        )"
    ]
   },
@@ -125,7 +119,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1e4675ba0224fbd9ce60caf84e0da38",
+       "model_id": "35255da1dfb74d8196387f69875b3754",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,13 +141,10 @@
     "        scalars=LV_MESH_DATA.SURFS,\n",
     "        container=\"cells\",\n",
     "        show_edges=True,\n",
-    "        vnodes=[\n",
-    "          (LV_VIRTUAL_NODES.APEX, \"green\"),\n",
-    "          (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
-    "          ],\n",
     "        categorical=True,\n",
     "        split_sharp_edges=True,\n",
     "        smooth_shading=False,\n",
+    "        pretty=False,\n",
     "        )"
    ]
   },
@@ -166,13 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5483222cb0e142faa596d79325c9cd2d",
+       "model_id": "040c52911f464968ab3c7f13fe0881c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,14 +198,11 @@
     "lv.plot(\"surface\", \n",
     "        scalars=LV_MESH_DATA.SURFS,\n",
     "        container=\"cells\",\n",
-    "        # show_edges=True,\n",
-    "        vnodes=[\n",
-    "          (LV_VIRTUAL_NODES.APEX, \"green\"),\n",
-    "          (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
-    "          ],\n",
+    "        show_edges=False,\n",
     "        categorical=True,\n",
     "        split_sharp_edges=True,\n",
     "        smooth_shading=False,\n",
+    "        pretty=False,\n",
     "        )"
    ]
   },
@@ -227,13 +215,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebdd947b949f448998ebacd499da52fb",
+       "model_id": "cfd9645397ee4750adbf27ba366b8e99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,13 +255,11 @@
     "lv.plot(\"surface\", \n",
     "        scalars=LV_MESH_DATA.SURFS,\n",
     "        container=\"cells\",\n",
-    "        vnodes=[\n",
-    "          (LV_VIRTUAL_NODES.APEX, \"green\"),\n",
-    "          (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
-    "          ],\n",
+    "        show_edges=False,\n",
     "        categorical=True,\n",
     "        split_sharp_edges=True,\n",
     "        smooth_shading=False,\n",
+    "        pretty=False,\n",
     "        )"
    ]
   }
