--- a/notebooks/lv/demos/surface_identification.ipynb
+++ b/notebooks/lv/demos/surface_identification.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8b4acc3c37542c6a70d02237191a231",
+       "model_id": "d1dd5dbc1bb34ab4a4f68b3cca9abf8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,9 +56,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv.identify_surfaces(\n",
-    "  endo_epi_args=dict(threshold=90.0),\n",
+    "lv.identify_regions(LV_GEO_TYPES.TYPE_B,\n",
     "  apex_base_args=dict(ab_ql=0.04, ab_qh=0.69),\n",
+    "  endo_epi_args=dict(threshold=90.0),\n",
     "  aortic_mitral_args=dict(a1=0.4,\n",
     "                          a2=0.5,\n",
     "                          a3=0.3,\n",
@@ -75,33 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1 in lv._nodesets"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f85231db5f264042b208db684ada3279",
+       "model_id": "a525288881a14c39a25c3b00a6316490",
        "version_major": 2,
        "version_minor": 0
       },
@@ -114,7 +94,8 @@
     }
    ],
    "source": [
-    "lv.plot(\"surface\", scalars=LV_MESH_DATA.SURFS.value, \n",
+    "lv.plot(\"surface\", \n",
+    "        scalars=LV_MESH_DATA.SURFS.value, \n",
     "        vnodes=[\n",
     "          (LV_VIRTUAL_NODES.MITRAL, \"green\"),\n",
     "          (LV_VIRTUAL_NODES.AORTIC, \"red\"),\n",
@@ -131,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27759f9b10494948b75e81efbc9e308f",
+       "model_id": "9395e06ed4fd4766b1fe0e41a1ad4126",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +125,8 @@
     }
    ],
    "source": [
-    "lv.plot(\"surface\", scalars=LV_MESH_DATA.SURFS_DETAILED.value, \n",
+    "lv.plot(\"surface\", \n",
+    "        scalars=LV_MESH_DATA.SURFS_DETAILED.value, \n",
     "        vnodes=[\n",
     "          (LV_VIRTUAL_NODES.MITRAL, \"green\"),\n",
     "          (LV_VIRTUAL_NODES.AORTIC, \"red\"),\n",
@@ -155,39 +137,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14ba6e6fa9bf4366992af96a8b42c0bd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "lv.plot(\"mesh\", scalars=LV_MESH_DATA.AB_ENDO_EPI.value, \n",
-    "        cat_exclude_zero=True,\n",
-    "        cmap=\"Set2_r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d4d9d230a4b43adb68effd8af9de1fa",
+       "model_id": "afa4d5cd4a2b40359dfac765b4ca51d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,7 +156,9 @@
     }
    ],
    "source": [
-    "lv.plot(\"mesh\", scalars=LV_MESH_DATA.EPI_ENDO.value, \n",
+    "lv.plot(\"mesh\", \n",
+    "        scalars=LV_MESH_DATA.AB_ENDO_EPI.value, \n",
+    "        categorical=True,\n",
     "        cmap=\"Set2_r\")"
    ]
   },
@@ -212,7 +170,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef174bdaa312476294c3732981e87fd2",
+       "model_id": "d91c53f28c384a6db9ccbdbfa8090bf6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,8 +183,35 @@
     }
    ],
    "source": [
-    "lv.plot(\"mesh\", scalars=LV_MESH_DATA.AM_EPI_ENDO.value, \n",
-    "        cat_exclude_zero=True,\n",
+    "lv.plot(\"mesh\", \n",
+    "        scalars=LV_MESH_DATA.EPI_ENDO.value, \n",
+    "        cmap=\"Set2_r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d7657baba3f545f9bc848cf7521f57d3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "lv.plot(\"mesh\", \n",
+    "        scalars=LV_MESH_DATA.AM_EPI_ENDO.value, \n",
+    "        categorical=True,\n",
     "        cmap=\"Set2\")"
    ]
   },
@@ -239,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,13 +242,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53fd547aedde4ea8bef1fa7ac1ab838c",
+       "model_id": "17683b76de744a1982696b4bb5464093",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,8 +261,10 @@
     }
    ],
    "source": [
-    "lv.plot(\"mesh\", scalars=\"TESTCAT\", \n",
-    "        cat_exclude_zero=True,\n",
+    "lv.plot(\"mesh\",\n",
+    "        scalars=\"TESTCAT\", \n",
+    "        container=\"cells\",\n",
+    "        categorical=True,\n",
     "        cmap=\"Set2\")"
    ]
   },
@@ -290,13 +277,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f08668610914bce86dba5ba0050f06b",
+       "model_id": "d6ff507c655f4724bc4fcbd9eb1a321c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,13 +308,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f64aa59866a74caabed465773886be94",
+       "model_id": "def1f8089ecc47378ff55ee85f3612e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -352,13 +339,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c2f79ed3b4946d5bfbe15aeeb22ff36",
+       "model_id": "cd7277b1740d4b9fbb53dce1bf10182e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -388,13 +375,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58be9f0a95564cb6836fab9d7cb76117",
+       "model_id": "15e58b588d9b4d72a88fa74c19b75f3b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -431,20 +418,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([2., 2., 2., ..., 0., 0., 0.]), array([2., 2., 2., ..., 0., 0., 0.]))"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lv.identify_fibers_region_ids_ldrb(LV_FIBER_MODES.LDRB_1)\n",
     "# lv.plot(scalars=LV_MESH_DATA.LDRB_1)"
@@ -452,24 +428,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c20e3081de9042e6af6567151f41a44c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lv.plot(scalars=LV_MESH_DATA.LDRB_1.value, cmap=\"hsv\")"
    ]
