added new BC sample

--- a/notebooks/lv/demos/boundary_conditions_on_LVTypeB.ipynb
+++ b/notebooks/lv/demos/boundary_conditions_on_LVTypeB.ipynb
@@ -46,7 +46,8 @@
     }
    ],
    "source": [
-    "lv.identify_surfaces(\n",
+    "lv.identify_regions(\n",
+    "  LV_GEO_TYPES.TYPE_B,\n",
     "  endo_epi_args=dict(threshold=90.0),\n",
     "  apex_base_args=dict(ab_ql=0.04, ab_qh=0.69),\n",
     "  aortic_mitral_args=dict(a1=0.4,\n",
