updated export_to_febio demo

--- a/notebooks/lv/demos/compute_fibers_on_LVIdeal.ipynb
+++ b/notebooks/lv/demos/compute_fibers_on_LVIdeal.ipynb
@@ -25,12 +25,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eaf207c3053c408ba2577ace23fbb3af",
+       "model_id": "bd77358e74cc4ab3bfef217e1142cb0c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(position=(49999.999999…"
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
       ]
      },
      "metadata": {},
@@ -61,12 +61,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2ccfdf54b3348529c94080a8460b7aa",
+       "model_id": "49eff98ee29f49dd8d890194333c048c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(position=(49999.999999…"
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
       ]
      },
      "metadata": {},
@@ -92,42 +92,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating scalar fields\n",
-      "Compute scalar laplacian solutions with the markers: \n",
-      "lv: 1\n",
-      "epi: 2\n",
-      "base: 23\n",
-      "  Num vertices: 1142\n",
-      "  Num cells: 3922\n",
-      "Solving linear variational problem.\n",
-      "  Apex coord: (0.00, 0.00, -20.00)\n",
-      "Solving linear variational problem.\n",
-      "Solving Laplace equation\n",
-      " lv = 1, epi = 0\n",
-      "Solving linear variational problem.\n",
-      " epi = 1, lv = 0\n",
-      "Solving linear variational problem.\n",
-      "\n",
-      "Calculating gradients\n",
-      "Compute fiber-sheet system\n",
-      "Angles: \n",
-      "alpha: \n",
-      " endo_lv: 60\n",
-      " epi_lv: -60\n",
-      " endo_septum: 60\n",
-      " epi_septum: -60\n",
-      " endo_rv: 60\n",
-      " epi_rv: -60\n",
-      "beta: \n",
-      " endo_lv: 0\n",
-      " epi_lv: 0\n",
-      " endo_septum: 0\n",
-      " epi_septum: 0\n",
-      " endo_rv: 0\n",
-      " epi_rv: 0\n"
+     "ename": "ImportError",
+     "evalue": "ldrb library is required for fiber computation.                Please, see https://github.com/finsberg/ldrb for details.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\users\\igorp\\onedrive\\documents\\github\\project-heart\\project_heart\\lv\\modules\\lv_fiber_estimator.py\u001b[0m in \u001b[0;36mcompute_fibers\u001b[1;34m(self, surf_region_key, fiber_space, alpha_endo_lv, alpha_epi_lv, beta_endo_lv, beta_epi_lv, markers, ldrb_kwargs, save_xdmfs, xdmfs_dir, xdmfs_basename, del_generated_files)\u001b[0m\n\u001b[0;32m    263\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 264\u001b[1;33m             \u001b[1;32mimport\u001b[0m \u001b[0mldrb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    265\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\igorp\\OneDrive\\Documents\\GitHub\\Project-Heart\\cenv\\lib\\site-packages\\ldrb\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcalculus\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mldrb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msave\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\igorp\\OneDrive\\Documents\\GitHub\\Project-Heart\\cenv\\lib\\site-packages\\ldrb\\ldrb.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mdolfin\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'dolfin'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24712/3371754259.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m lv.compute_fibers(surf_region_key=LV_MESH_DATA.SURFS,\n\u001b[0m\u001b[0;32m      2\u001b[0m                     \u001b[0mfiber_space\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"P_1\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m                     \u001b[0malpha_endo_lv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Fiber angle on the endocardium\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                     \u001b[0malpha_epi_lv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Fiber angle on the epicardium\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m                     \u001b[0mbeta_endo_lv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Sheet angle on the endocardium\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\igorp\\onedrive\\documents\\github\\project-heart\\project_heart\\lv\\modules\\lv_fiber_estimator.py\u001b[0m in \u001b[0;36mcompute_fibers\u001b[1;34m(self, surf_region_key, fiber_space, alpha_endo_lv, alpha_epi_lv, beta_endo_lv, beta_epi_lv, markers, ldrb_kwargs, save_xdmfs, xdmfs_dir, xdmfs_basename, del_generated_files)\u001b[0m\n\u001b[0;32m    264\u001b[0m             \u001b[1;32mimport\u001b[0m \u001b[0mldrb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    265\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 266\u001b[1;33m             raise ImportError(\"ldrb library is required for fiber computation.\\\n\u001b[0m\u001b[0;32m    267\u001b[0m                 Please, see https://github.com/finsberg/ldrb for details.\")\n\u001b[0;32m    268\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: ldrb library is required for fiber computation.                Please, see https://github.com/finsberg/ldrb for details."
      ]
     }
    ],
@@ -195,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
